k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: devops-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: product-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
          readinessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: devops-demo
spec:
  selector:
    app: product-service
  ports:
    - port: 4002
      targetPort: 4002
